--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -2,40 +2,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bkg0"
+    android:orientation="vertical"
     >
-
-    <Button android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="@string/button_people"
-        android:onClick="sendMessage"
-        android:layout_gravity="bottom"
-        android:id="@+id/button0" />
-
-    <Button
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/button_edit"
-        android:onClick="sendMessage"
-        android:layout_gravity="bottom"
-        android:id="@+id/button1" />
-
-    <EditText android:id="@+id/edit_message"
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:hint="@string/edit_message"
-        />
+        android:layout_height="wrap_content">
 
-    <Button
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/button_send"
-        android:onClick="sendMessage"
-        android:layout_gravity="bottom"
-        android:id="@+id/button2" /><![CDATA[
-    />
-]]>
+        <Button android:id="@+id/message_btn"
+            android:layout_width="120dp"
+            android:layout_height="38dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="0dip"
+            android:text="消息"
+            android:textSize="16sp"
+
+            />
+
+        <Button android:id="@+id/address_btn"
+            android:layout_width="120dp"
+            android:layout_height="38dp"
+            android:layout_alignParentBottom="true"
+            android:layout_toRightOf="@+id/message_btn"
+            android:textSize="16sp"
+            android:text="通讯录"
+            />
+
+        <Button android:id="@+id/manage_btn"
+            android:layout_width="120dp"
+            android:layout_height="38dp"
+            android:layout_alignParentBottom="true"
+            android:layout_toRightOf="@+id/address_btn"
+            android:textSize="16sp"
+            android:text="管理"
+            />
+
+        </RelativeLayout>
+
 </LinearLayout>
