注册和登录实现（问题是对USER数据的报错，classnotfound的Exception，会着力解决）

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,6 +54,7 @@
             android:layout_marginTop="12.0dip"
             android:textSize="16sp"
             android:text="注册"
+            android:onClick="register"
             />
         </RelativeLayout>
 
